...
    <string name="txt_title_drive">Get A Lift - Drive</string>
    <string name="txt_title_result_search">Available drives</string>
    <string name="txt_create_route">Or you can create your route</string>
    <string name="btn_create_route">I want to drive</string>
    <string name="btn_create_ride">Create</string>
    <string name="btn_edit_ride">Edit</string>
    <string name="txt_title_help">Get A Lift - Help</string>
    <string name="txt_title_faq">Get A Lift - F.A.Q</string>
    <string name="txt_title_about">Get A Lift - About</string>
    <string name="text_title_contact_us">Get A Lift - Contact Us</string>
    <string name="text_title_settings">Get A Lift - Settings</string>

    <!-- Strings related to error for Contact US page -->
...
